fix gravatar looping on donors page

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -213,9 +213,14 @@ i {
             */
 }
 
+span.gravatar {
+  margin: 0 20px 0 10px;
+}
+
 .report-donations span {
   font-family: 'Varela Round', sans-serif !important;
   color: #ecf0f1;
+  
 }
 
 .report-donations span a {
@@ -228,10 +233,10 @@ i {
 }
 
 .gravatar-img {
-  display: inline-block;
+  //display: inline-block;
   padding: 1px 25px;
   margin: 1px 25px;
-  text-align: center;
+  //text-align: center;
 }
 
 .gravatar-img img {
@@ -287,8 +292,6 @@ h2 {
   font-size: 20px;
   text-transform: uppercase;
 }
-
-////////// HOME //////////
 
 .navbtn {
   //border-top: -3px solid #80B929;
