fix geolocation search and login modal

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -61,7 +61,7 @@ html(class='no-js', lang='en')
                 input(name='email', type='text', autofocus=true, required)
                 label.left Password
                 input(name='password', type='password' required)
-          a.close-reveal-modal &#215;
+                button.radius.close-reveal-model Login
 
     .row#main
       .small-12.columns
