clean up map page and login modal

--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -53,7 +53,8 @@ html(class='no-js', lang='en')
                   button.tiny.radius.space.navbtn Logout
     .row
       .small-12.columns
-        div#myModal2.reveal-modal.tiny(data-reveal)
+        div#myModal2.reveal-modal.medium(data-reveal)
+          a.close-reveal-modal &#215;
           .row
             .small-12.columns
               form(action='/login', method='post')
