--- a/app/less/app.less
+++ b/app/less/app.less
@@ -8,12 +8,17 @@ body{
 }
 
 #main {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+  font-family: 'Lato', sans-serif !important;
 }
 
 ////////// FONTS //////////
 h1, h3,  h4, p, button, a, span{
   font-family: 'Lato', sans-serif !important;
+}
+
+#arch {
+  letter-spacing: -5px;
 }
 
 .top-bar{
@@ -233,10 +238,8 @@ span.gravatar {
 }
 
 .gravatar-img {
-  //display: inline-block;
   padding: 1px 25px;
   margin: 1px 25px;
-  //text-align: center;
 }
 
 .gravatar-img img {
@@ -291,8 +294,4 @@ h2 {
   color: #ecf0f1;
   font-size: 20px;
   text-transform: uppercase;
-}
-
-.navbtn {
-  //border-top: -3px solid #80B929;
 }
