--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -1,7 +1,8 @@
 extends ../shared/template
 
 block content
-    h1 <i class="fa fa-flag"></i> Civic 311
+    h1#arch Civic 311
+    h1 <i class="fa fa-flag"></i>
     h3 Citizen to Government collaboration made simple
 
     .row
