--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -88,6 +88,7 @@ html(class='no-js', lang='en')
     script(src='/js/source/main.js')
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAg7BExWsO3xkC80yWGVtWKCrA_eFr-M34&sensor=true&libraries=places')
     script(src='/js/vendor/jquery.geocomplete.min.js')
+    script(src='/js/vendor/js/jquery.arctext.js')
     //script(src='/js/vendor/dropzone.js')
     block scripts
 
