update fonts and README

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -1,20 +1,20 @@
 @bg-color: #fff;
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900);
-@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+@import url(http://fonts.googleapis.com/css?family=Medula+One);
+@import url(http://fonts.googleapis.com/css?family=Abel);
 
 body{
   background-image: url('/img/satinweave.png');
-  font-family: 'Lato', sans-serif !important;
+  font-family: 'Abel', sans-serif !important;
 }
 
 #main {
   margin-bottom: 50px;
-  font-family: 'Lato', sans-serif !important;
+  font-family: 'Abel', sans-serif !important;
 }
 
 ////////// FONTS //////////
-h1, h3,  h4, p, button, a, span{
-  font-family: 'Lato', sans-serif !important;
+h4, p, button, a, span{
+  font-family: 'Abel', sans-serif !important;
 }
 
 #arch {
@@ -82,20 +82,18 @@ button.tiny {
   font-weight: 600;
 }
 
-h1, h3 {
-  font-family: 'Varela Round', sans-serif !important;
+h1 {
+  font-family: 'Abel', sans-serif !important;
   font-size: 3.75rem;
   color: #3498db;
   font-weight: 900;
   text-align: center;
   margin-top: 20px;
-}
-
-h1 {
   text-transform: uppercase;
 }
 
 h3 {
+  font-family: 'Medula One', cursive !important;
   font-size: 2.2rem;
   color: #3b476b;
   font-weight: 700;
@@ -223,13 +221,13 @@ span.gravatar {
 }
 
 .report-donations span {
-  font-family: 'Varela Round', sans-serif !important;
+  font-family: 'Abel', sans-serif !important;
   color: #ecf0f1;
   
 }
 
 .report-donations span a {
-  font-family: 'Varela Round', sans-serif !important;
+  font-family: 'Abel', sans-serif !important;
   color: #80B929;;
 }
 
@@ -262,7 +260,7 @@ h2 {
 }
 
 .report-donations h4 {
-  font-family: 'Varela Round', sans-serif !important;
+  font-family: 'Abel', sans-serif !important;
   color: #ecf0f1;
   text-transform: uppercase;
   margin-top: 35px;
