--- a/app/less/app.less
+++ b/app/less/app.less
@@ -142,9 +142,6 @@ i {
   border: 5px solid #80B929;
 }
 
-.fa.fa-flag {
-}
-
 #home-img {
   background-image: url(../img/flat.jpg);
   background-size: cover;
@@ -216,14 +213,15 @@ i {
             */
 }
 
-span.gravatar {
-  margin: 0 20px 0 10px;
-}
-
 .report-donations span {
   font-family: 'Abel', sans-serif !important;
   color: #ecf0f1;
-  
+  font-size: 30px;
+}
+
+span.gravatar {
+  margin: 0 20px 0 10px;
+  font-size: 20px;
 }
 
 .report-donations span a {
@@ -269,6 +267,11 @@ h2 {
 .report-donations p {
   color: #ecf0f1;
   font-size: 20px;
+}
+
+#donate {
+  font-family: 'Medula One', cursive !important;
+  font-size: 65px;
 }
 
 ////////// HOME //////////
