clean up emails

--- a/app/views/email/access.jade
+++ b/app/views/email/access.jade
@@ -1,6 +1,6 @@
-h1(style="color:#2980b9;")= subject
+h1(style="color:#3498db;")= subject
 h4 Thank you, #{to}, for signing up with Civic 311.
-h4 Please complete your registraion with the following access token :
+h4 Please complete your registraion with the following access token:
 h2 #{token}
 
 small Your City
