--- a/app/views/email/update.jade
+++ b/app/views/email/update.jade
@@ -1,6 +1,6 @@
-h1(style="color:#2980b9;")= subject
+h1(style="color:#3498db;")= subject
 h3 #{name},
-h3 The status of your report with Civic 311 has been updated as follows:
+h3 The status of report, #{reportName} with Civic 311 has been updated as follows:
 h4 #{currentStatus}
 
 small Your City
