--- a/app/views/email/welcome.jade
+++ b/app/views/email/welcome.jade
@@ -1,4 +1,4 @@
-h1(style="color:#2980b9;")= subject
+h1(style="color:#3498db;")= subject
 p Thank you, #{to}, for signing up with Civic 311!
 
 small Your City
