--- a/app/views/shared/template.jade
+++ b/app/views/shared/template.jade
@@ -10,6 +10,7 @@ html(class='no-js', lang='en')
     link(rel='stylesheet', href='/less/app.css')
     //link(rel='stylesheet', href='/css/dropzone.css')
     link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet")
+    link(rel='stylesheet', href='/css/font-awesome-animation.css')
     script(src='/js/vendor/modernizr.js')
   body
     .sticky.fixed
