fix gravatar by adding it to routes instead

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -12,6 +12,10 @@ body{
   font-family: 'Abel', sans-serif !important;
 }
 
+#map img {
+  max-width: none;
+}
+
 ////////// FONTS //////////
 h4, p, button, a, span{
   font-family: 'Abel', sans-serif !important;
@@ -191,6 +195,23 @@ i {
 }
 
 ////////// DONATIONS //////////
+.donor-email {
+  border-radius: 100%;
+  margin-top: 15px;
+}
+
+.donor-name {
+  font-size: 20px;
+  color: #fff;
+  display: inline-block;
+  margin: 20px;
+  text-align: center;
+}
+
+.donor-box {
+  display: inline;
+}
+
 .report-donations {
   border-top: 35px solid #80B929;
   border-radius: 15px;
